# actix-gs

./: Cargo.toml  README.md
config/: base.yaml  local.yaml
migrations/: 20220915125721_create_category_table.sql
script/: db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/api/: category.rs  mod.rs
tests/api/: health_check.rs  helpers.rs
