[package]
name = "actix-gs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.1"
anyhow = "1.0"
config = { version = "0.13", default-features = false, features = ["yaml"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0"
serde-aux = "4.0"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "migrate", "offline"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }